--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=AuthFlow
+spring.datasource.url=jdbc:mariadb://localhost:3306/auth-flow
+spring.datasource.username=root
+spring.datasource.password=1111
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
